# LabProject

./: CMakeLists.txt  Collection.cpp  Collection.h  CollectionSizeObserver.cpp  CollectionSizeObserver.h  Note.cpp  Note.h  Observer.h  Subject.h  main.cpp
test/: CMakeLists.txt  TestCollection.cpp  TestNote.cpp
